# edex-ui-2026

./: .gitignore  KNOWLEDGE.md  PARITY.md  README.md  RUST_CORE_DEPENDENCIES.md  RUST_CORE_IDEA.md  RUST_CORE_PLAN.md  TUI_CLIENT_PLAN.md  package-lock.json  package.json
rust/: Cargo.toml  README.md
rust/crates/claw-bridge/: Cargo.toml
rust/crates/claw-bridge/src/: lib.rs
rust/crates/context-engine/: Cargo.toml
rust/crates/context-engine/src/: lib.rs
rust/crates/core-domain/: Cargo.toml
rust/crates/core-domain/src/: lib.rs
rust/crates/core-events/: Cargo.toml
rust/crates/core-events/src/: lib.rs
rust/crates/core-policy/: Cargo.toml
rust/crates/core-policy/src/: lib.rs
rust/crates/core-state/: Cargo.toml
rust/crates/core-state/src/: lib.rs
rust/crates/file-index/: Cargo.toml
rust/crates/file-index/src/: lib.rs
rust/crates/history-store/: Cargo.toml
rust/crates/history-store/src/: lib.rs
rust/crates/recovery-manager/: Cargo.toml
rust/crates/recovery-manager/src/: lib.rs
rust/crates/runtime-api/: Cargo.toml
rust/crates/runtime-api/src/: framing.rs  lib.rs  protocol.rs
rust/crates/runtime-daemon/: Cargo.toml
rust/crates/runtime-daemon/src/: lib.rs  main.rs
rust/crates/secrets-store/: Cargo.toml
rust/crates/secrets-store/src/: lib.rs
rust/crates/session-broker/: Cargo.toml
rust/crates/session-broker/src/: lib.rs
rust/crates/ssh-bridge/: Cargo.toml
rust/crates/ssh-bridge/src/: lib.rs
rust/crates/tmux-bridge/: Cargo.toml
rust/crates/tmux-bridge/src/: lib.rs
rust/crates/tui-client/: Cargo.toml
rust/crates/tui-client/src/: main.rs
scripts/: run-tui-dev.sh
src/: _boot.js  _renderer.js  package-lock.json  package.json  preload.js  ui.html
src/classes/: audiofx.class.js  clock.class.js  conninfo.class.js  cpuinfo.class.js  docReader.class.js  filesystem.class.js  fuzzyFinder.class.js  hardwareInspector.class.js  keyboard.class.js  locationGlobe.class.js  mediaPlayer.class.js  modal.class.js  netstat.class.js  ramwatcher.class.js  sysinfo.class.js  terminal.class.js  toplist.class.js  updateChecker.class.js
