[package]
name = "core-state"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
core-domain = { path = "../core-domain" }
rusqlite.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
secrets-store = { path = "../secrets-store" }
thiserror.workspace = true
uuid.workspace = true
