[package]
name = "runtime-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
context-engine = { path = "../context-engine" }
core-domain = { path = "../core-domain" }
core-events = { path = "../core-events" }
core-policy = { path = "../core-policy" }
file-index = { path = "../file-index" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
