[package]
name = "secrets-store"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
age.workspace = true
base64.workspace = true
secrecy.workspace = true
secret-service.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
zeroize.workspace = true
